# PucksInDeep

./: .gitignore  README.md
AirHockey/: AirHockey.py
BluePill/FeedForwardControl/: .gitignore
BluePill/ProtoControl/: platformio.ini
BluePill/Serial_coms/: platformio.ini
BluePill/SystemID/: .gitignore  platformio.ini
BluePill/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
BluePill/log/: latest_build
Low Level Controller/: platformio.ini
Low Level Controller/backup/: main.cpp
Low Level Controller/include/: stm32f1xx_it.h
Low Level Controller/src/: main.cpp  stm32f1xx_hal_msp.c
MATLAB/: Coeffs.m  DiffDriveGantry.m  TimeDomain.m  d_step_speed_10.txt  forward_copy.m  forwards_experiment.m  hand_invert.m  numerical.m  ramp_uptoSpeed_21.txt  run-1.txt  sideways.m  sideways_copy.m  time_domain_model.m  voltage_solver.asv  voltage_solver.m
MATLAB/Data March 10th/: 2022-03-10 14_15_43.028055.csv  2022-03-10 14_16_52.175212.csv  2022-03-10 14_19_07.607719.csv  2022-03-10 14_22_23.615809.csv
MATLAB/New_PS_ID/: d_step_speed_10.txt
Modeling/: .gitignore  test_model.py  train_model.py
PC/rosHockey/pt/: CMakeLists.txt
PC/rosHockey/pt/src/: puck_tracker.cpp
PC/rosHockey/pt/src/lib/PuckTracker/: tracker.cpp  tracker.hpp
RPi/: run-diag.txt
RPi/BP_Coms/: BP_Coms.py  bp_coms_test.py
RPi/GUI/: BP_Coms.py  liveplot.py  path_generator.py
RPi/RPi-pucktracker/puck_tracker_cpp/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  puck_tracker  puck_tracker.cpp  really_not_puck_tracker copy.dicks.txt
RPi/RPi-pucktracker/puck_tracker_cpp/calibration/: HSV.txt  calibrate.txt
RPi/RPi-pucktracker/puck_tracker_cpp/lib/PuckTracker/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  tracker.cpp  tracker.hpp
RPi/RPi-pucktracker/puck_tracker_cpp/lib/savgol/: CMakeLists.txt  savgol.cpp  savgol.hpp
RPi/RPi-pucktracker/puck_tracker_cpp/scripts/: calibrate.py
RPi/camera/: run_camera.bash
RPi/current_testing/: read_.py
RPi/path_solver/: control_notes.txt  solve_for_coefs.py
RPi/qt_gui/: BP_Coms.py  app_framework.py  layout.ui  main.py  mplwidget.py  path_generator.py
RPi/rosHockey/: .gitignore  gui.bash
RPi/savgol/: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main  main.cpp
ai/: config.py  convert_keras_to_caffe2.py  copy_to_android.sh
ai/cpp/: README.md  predictor_verifier.cc
ai/reinforcement/: plot_utils.py  rl_agents.py  test.py  train.py  train_cartpole.py
ai/supervised/: analyze_data.py  generate_data.py  generate_data.sh  mix_random_images_with_data.py  regenerate_data.sh  scrape_random_images.sh  visualize_data.py  visualize_data.sh  visualize_mixed_data.sh  words.list
air-hockey/air_hockey/: ai.py  circle.py  dimensions.py  force.py  game_info.py  line.py  phy_const.py  sprite_utils.py  vector.py
calcs/: twincables.py
docs/: DoxygenLayout.xml  README.md  config.txt
experiments/: animate.py  proto_control.py
gym-air-hockey/: README.md  setup.py
install/: local_setup.sh  setup.sh
log/: latest_build
modeling/: Theta_Voltage_5000.pkl  custom_layers.py  make_fake_data.py  model.py  test_model.py  train_model.py  train_model_mse.py
numeric_model/: twincables.py
path_test/: figure_8.py
perception/: .gitignore  README.md
physicalV8dModel.model/: keras_metadata.pb  saved_model.pb
pres_viz/: animate.py
(+681 files in other folders)
